feat: create posts with axios connection
